--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -1,8 +1,27 @@
-<div class="container">
+<div class="container"> 
+	<!-- Hotel Room List Table-->
 	<div class="page-header hotel-header">
-		<div class="hotel-name">
+		<div class="hotel-header1">
 			Demo Hotel
 		</div>
-		<div hotel-rating rating-value="rating" max="5" class="hotel-rate">  </div>
+		<div hotel-rating rating-value="rating" max="5">  </div>
+	</div>
+	
+	<!-- Hotel Information -->
+	<div class="page-header">
+		<div class="property-header">
+			Hotel information
+		</div>
+	</div>
+	
+	<div class="row">
+		<div class="col-md-3">
+			<span class="hotel-name">{{Hotel.name}}</span>
+			<br/>
+			{{Hotel.address}}
+			<br/>
+			{{Hotel.phone}}
+		</div>
+		<div class="col-md-9">b</div>
 	</div>
 </div>
