--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -65,4 +65,13 @@
 			</li>
 		</ul>
 	</div>
+	
+	<div class="terms">
+		<div class="page-header property-header">
+			Terms & Conditions
+		</div>
+		<div class="term-desc">
+			{{hotel.terms}}
+		</div>
+	</div>
 </div>
