added booking (on progress)

--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -60,6 +60,9 @@
 								{{feature}}
 							</li>
 						</ul>
+						<button type="button" class="btn btn-default btn-sm booking-btn" ng-click="booking(acc.id)">
+							<i class="glyphicon glyphicon-star"></i> Book
+						</button>
 					</div>
 				</div>
 			</li>
