--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,12 +1,15 @@
 /* app css stylesheet */
 body,html{
 	height:100%;
+	background-color:#57534d;
+	background-attachment:fixed;
 }
 
 #page{
 	height:100%;
 	width:100%;
 	background-color:#57534d;
+	background-attachment:fixed;
 }
 
 #wrapper{
@@ -14,6 +17,7 @@ body,html{
 	margin-left: auto ;
 	margin-right: auto ;
 	box-shadow: 0px 0px 5px #000;
+	background-color:#57534d
 }
 
 .header{
@@ -146,4 +150,10 @@ margin-top:10px;
 .term-desc {
 	color:#777;
 	font-size:12px;
+	margin-bottom:40px;
+}
+
+.booking-btn{
+	position:relative;
+	float:right;
 }
