--- a/app/partials/reservation.html
+++ b/app/partials/reservation.html
@@ -187,4 +187,13 @@
 			</button>
 		</form>
 	</div>
+	
+	<div class="terms">
+		<div class="page-header property-header">
+			Terms & Conditions
+		</div>
+		<div class="term-desc">
+			{{hotel.terms}}
+		</div>
+	</div>
 </div>
