--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -19,6 +19,8 @@
 			{{hotel.address}}
 			<br/>
 			{{hotel.phone}}
+			<br/>
+			{{hotel.email}}
 		</div>
 		<div class="col-md-9">
 				<div image-carousel ></div>
