--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,14 +1,14 @@
 /* app css stylesheet */
 body,html{
 	height:100%;
-	background-color:#57534d;
+	background-color:#c1bfaa;
 	background-attachment:fixed;
 }
 
 #page{
 	height:100%;
 	width:100%;
-	background-color:#57534d;
+	background-color:#c1bfaa;
 	background-attachment:fixed;
 }
 
@@ -17,21 +17,26 @@ body,html{
 	margin-left: auto ;
 	margin-right: auto ;
 	box-shadow: 0px 0px 5px #000;
-	background-color:#57534d
+	background-color:#c1bfaa	
 }
 
 .header{
 	margin-top:50px;
-	height:200px;
-	background-image:url('../img/hotel-header.jpg');
-	
+	height:180px;
+	background-image:url('../img/hotel-header.png');
 }
 
 nav.navbar-wrapper{
-	background-color:#304244;
+	background-color:#a09e89;
+	box-shadow: 0px 0px 5px #000;
+	color:#fff;
 }
 
 nav .navbar-nav > li > a {
+	color:#fff;
+}
+
+.navbar-default .navbar-nav > li > a{
 	color:#fff;
 }
 
@@ -104,7 +109,7 @@ ul.rating {
 
 .feature-list li{
 	display:inline-block;
-	width:180px;
+	width:200px;
 }
 
 .accomodation-list{
