--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -6,6 +6,51 @@
 		</div>
 		<div hotel-rating rating-value="rating" max="5">  </div>
 	</div>
+
+	<div class="row">
+		<table class="table price-table" 
+			   ng-controller="PriceTableCtrl">
+			<thead class="controlHead"></thead>
+			<thead class="dateTableHead">
+				<tr>
+					<th colspan="2" style="text-align: left;">
+						Prices will be charged in Indonesian Rupiah
+					</th>
+					<th>
+						Full Rate
+					</th>
+					<th ng-repeat="dateObj in dateArray" ng-class="{weekendHighlight:dateObj.weekday}">
+						<span class="dayTitle"> {{dateObj.day}} </span>
+						<span class="dateTitle"> {{dateObj.date}} </span>
+						<span class="monthTitle"> {{dateObj.month}} </span>
+					</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr ng-repeat="roomItem in roomList">
+					<td> {{roomItem.name}} </td>
+					<td> 
+						<button type="button" class="btn btn-primary btn-sm booking-btn" ng-click="booking(roomItem.id)">
+							<i class="glyphicon glyphicon-tag"></i> Book
+						</button> 
+					</td>
+					<td>
+						<b> {{roomItem['full-rate'] | currency:"IDR "}} </b>
+					</td>
+
+					<td ng-repeat="dateObj in dateArray" 
+						ng-class="{active:dateObj.weekday}"
+						class="price-col"
+						ng-click="booking(roomItem.id, dateStrArray[$index], dateObj.day)">
+						<span price-column 
+							room = "{{ roomItem.id }}"
+							day ="{{ dateObj.day | lowercase }}">
+						</span> 
+					</td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
 	
 	<!-- Hotel Information -->
 	<div class="page-header property-header">
