--- a/app/css/app.css
+++ b/app/css/app.css
@@ -189,6 +189,16 @@ margin-top:10px;
 	background-color:#888;
 }
 
+.step2error{
+	border: 2px solid #000;
+	border-radius:10px;
+	font-size:22px;
+	padding:5px;
+	margin-right:15px;
+	display:inline-block;
+	margin-bottom:10px;
+}
+
 .col-header{
 	font-weight:bold;
 	margin-bottom:15px;
